cmake_minimum_required(VERSION 4.0)
project(cpp_Learning)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp_Learning main.cpp)
add_executable(ex1_getRandom basic/array/return_array/ex1_getRandom.cpp)
add_executable(ex2_createArray basic/array/return_array/ex2_createArray.cpp)
add_executable(string_ex1 basic/string/ex1.cpp)
add_executable(ex2_string_function basic/string/ex2_string_function.cpp)
